# libpci-rs

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  helper  helper.ps1  helper.py
.github/: dependabot.yml
.github/workflows/: check.yml  lint.yml  msrv.yml  tests.yml
scripts/: __init__.py  common.py  format.py  lint.py  run-clang-format.py
src/: class.rs  ids.rs  lib.rs  pci.rs
src/backend/: bindings.rs  bridge.rs  common.rs  mod.rs
src/backend/c/: CMakeLists.txt  api.h  common.c  stub.c
src/backend/c/bsd/: mod.c
src/backend/c/common/: vector.c  vector.h
src/backend/c/darwin/: impl.c  mod.cc  mod.cpp  mod.h
src/backend/c/tests/: test.h  test_stack.c
src/backend/cxx/darwin/: main.cc
src/backend/darwin/: darwin.cc
src/backend/freebsd/: freebsd.cc
src/backend/haiku/: haiku.cc  poke.h
src/backend/include/: common.h  intel_io.h
src/backend/include/x86/: port.h
src/backend/linux/: mod.rs
src/backend/netbsd/: netbsd.cc
src/backend/windows/: mod.rs
src/backend/x86/: port.cc
src/lib/: class.rs  ids.rs  lib.rs  pci.rs
src/lib/backend/: bridge.rs  class.rs  mod.rs
src/lib/backend/darwin/: darwin.cc
src/lib/backend/freebsd/: freebsd.cc
src/lib/backend/haiku/: haiku.cc  poke.h
src/lib/backend/include/: common.h
src/lib/backend/linux/: mod.rs
src/lib/backend/netbsd/: netbsd.cc
src/lib/backend/windows/: mod.rs
