[package]
name = "libpci-rs"
description = "A cross-platform library to detect and list PCI devices and their information."
authors = [ "Gibson Pilconis", "shibedrill" ]
license = "BSD-3-Clause"
version = "0.2.5"
edition = "2021"
homepage = "https://github.com/gibsonpil/libpci-rs"
documentation = "https://docs.rs/libpci-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.69.4"
cfg-if = "1.0.0"
confindent = "2.2.0"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0",features = [
        "Win32_Devices_DeviceAndDriverInstallation", 
        "Win32_Foundation"
    ]}

[dev-dependencies]
fastrand = "2.0.0"

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
