[package]
name = "libpci-rs"
description = "A cross-platform library to detect and list PCI devices and their information."
authors = [ "Gibson Pilconis", "shibedrill" ]
license = "BSD-3-Clause"
version = "0.2.9"
edition = "2021"
homepage = "https://github.com/gibsonpil/libpci-rs"
documentation = "https://docs.rs/libpci-rs"
readme = "README.md"
build = "build/main.rs"
categories = [ "api-bindings", "hardware-support", "os" ]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pciids"]
pciids = ["dep:phf"]

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "lspci"
path = "src/bin/lspci.rs"

[dependencies]
bindgen = "0.69.4"
cfg-if = "1.0.0"
clap = { version = "=4.4.18", features = ["derive"] }
cxx = { version = "1.0.120", features = ["c++17"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
phf = { version = "0.11.2", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0",features = [
        "Win32_Devices_DeviceAndDriverInstallation", 
        "Win32_Foundation"
    ]}

[dev-dependencies]
fastrand = "2.0.2"

[build-dependencies]
quote = "1.0"
phf_codegen = "0.11.2"
proc-macro2 = "1.0.79"
cfg-if = "1.0.0"
cxx-build = "1.0.120"

[profile.release]
strip = true
lto = true
opt-level = "z"
